// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`insight - utils > align text 1`] = `
[
  {
    "center": [
      777,
      231,
    ],
    "content": "does not matter",
    "locator": "find_me",
    "rect": {
      "height": 30,
      "left": 530,
      "top": 216,
      "width": 494,
    },
  },
]
`;

exports[`insight - utils > expand id into elements 1`] = `
[
  {
    "center": [
      0,
      0,
    ],
    "content": "hello world of 1",
    "hover": [Function],
    "press": [Function],
    "rect": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "tap": [Function],
    "type": [Function],
  },
  {
    "center": [
      0,
      0,
    ],
    "content": "hello world of 2",
    "hover": [Function],
    "press": [Function],
    "rect": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "tap": [Function],
    "type": [Function],
  },
  {
    "center": [
      0,
      0,
    ],
    "content": "hello world of 3",
    "hover": [Function],
    "press": [Function],
    "rect": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "tap": [Function],
    "type": [Function],
  },
]
`;

exports[`insight - utils > expandLiteSection 1`] = `
{
  "content": [
    {
      "center": [
        50,
        50,
      ],
      "content": "hello world of 1",
      "hover": [Function],
      "press": [Function],
      "rect": {
        "height": 100,
        "left": 0,
        "top": 0,
        "width": 100,
      },
      "tap": [Function],
      "type": [Function],
    },
    {
      "center": [
        50,
        50,
      ],
      "content": "hello world of 2",
      "hover": [Function],
      "press": [Function],
      "rect": {
        "height": 100,
        "left": 0,
        "top": 0,
        "width": 100,
      },
      "tap": [Function],
      "type": [Function],
    },
    {
      "center": [
        50,
        50,
      ],
      "content": "hello world of 3",
      "hover": [Function],
      "press": [Function],
      "rect": {
        "height": 100,
        "left": 0,
        "top": 0,
        "width": 100,
      },
      "tap": [Function],
      "type": [Function],
    },
  ],
  "description": "description",
  "name": "section",
  "rect": {
    "height": 100,
    "left": 0,
    "top": 0,
    "width": 100,
  },
  "sectionCharacteristics": "characteristics",
}
`;

exports[`insight - utils > expandLiteSection 2`] = `
{
  "content": [],
  "description": "description",
  "name": "section",
  "rect": {
    "height": 0,
    "left": -1,
    "top": -1,
    "width": 0,
  },
  "sectionCharacteristics": "characteristics",
}
`;

exports[`insight - utils > shallow expand ids inside data 1`] = `
{
  "element": {
    "center": [
      0,
      0,
    ],
    "content": "hello world of 9",
    "hover": [Function],
    "press": [Function],
    "rect": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "tap": [Function],
    "type": [Function],
  },
  "moreElements": [
    {
      "center": [
        0,
        0,
      ],
      "content": "hello world of 99",
      "hover": [Function],
      "press": [Function],
      "rect": {
        "height": 100,
        "left": 0,
        "top": 0,
        "width": 100,
      },
      "tap": [Function],
      "type": [Function],
    },
    {
      "center": [
        0,
        0,
      ],
      "content": "second world of 99",
      "hover": [Function],
      "press": [Function],
      "rect": {
        "height": 100,
        "left": 0,
        "top": 0,
        "width": 100,
      },
      "tap": [Function],
      "type": [Function],
    },
  ],
  "myIds": [
    {
      "center": [
        0,
        0,
      ],
      "content": "hello world of 1",
      "hover": [Function],
      "press": [Function],
      "rect": {
        "height": 100,
        "left": 0,
        "top": 0,
        "width": 100,
      },
      "tap": [Function],
      "type": [Function],
    },
    {
      "center": [
        0,
        0,
      ],
      "content": "hello world of 2",
      "hover": [Function],
      "press": [Function],
      "rect": {
        "height": 100,
        "left": 0,
        "top": 0,
        "width": 100,
      },
      "tap": [Function],
      "type": [Function],
    },
    {
      "center": [
        0,
        0,
      ],
      "content": "hello world of 3",
      "hover": [Function],
      "press": [Function],
      "rect": {
        "height": 100,
        "left": 0,
        "top": 0,
        "width": 100,
      },
      "tap": [Function],
      "type": [Function],
    },
  ],
  "title": "title",
  "undefinedElement": null,
}
`;

exports[`insight - utils > shallow expand ids inside data 2`] = `
[
  {
    "element": "9",
    "moreElements": "99",
    "myIds": [
      "1",
      "2",
      "3",
    ],
    "title": "title",
    "undefinedElement": "365",
  },
  {
    "element": "9",
    "moreElements": "99",
    "myIds": [
      "1",
      "2",
      "3",
    ],
    "title": "title",
    "undefinedElement": "365",
  },
]
`;
